--- a/C_learning/learn_09_16/learn_09_16.vcxproj
+++ b/C_learning/learn_09_16/learn_09_16.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{a1adc683-73d7-44de-be98-1c4104cf4432}</ProjectGuid>
     <RootNamespace>learn0916</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>learn_09_17</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
