--- a/learn_09_19/learn_09_19.vcxproj
+++ b/learn_09_19/learn_09_19.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="learn_09_19_01.c" />
+    <ClCompile Include="learn_09_19_02.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
