校园网登录小试

--- a/learn_09_24/learn_09_24.vcxproj
+++ b/learn_09_24/learn_09_24.vcxproj
@@ -108,12 +108,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;CURL_STATICLIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>E:\Microsoft Visual Studio\curl-8.10.1\builds\libcurl-vc15-x64-release-static-ipv6-sspi-schannel\lib</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>E:\Microsoft Visual Studio\curl-8.10.1\builds\libcurl-vc15-x64-release-static-ipv6-sspi-schannel\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>E:\Microsoft Visual Studio\curl-8.10.1\builds\libcurl-vc15-x64-release-static-ipv6-sspi-schannel\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>libcurl_a.lib;Ws2_32.lib;Wldap32.lib;winmm.lib;Crypt32.lib;Normaliz.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
