--- a/learn_10_01_01/learn_10_01_01.vcxproj
+++ b/learn_10_01_01/learn_10_01_01.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{da09e56c-f1e3-4de1-9a6a-5245a4176990}</ProjectGuid>
     <RootNamespace>learn100101</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>learn_10_01</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
